@@ -1,3 +1,11 @@
+20100212
+ - (djm) OpenBSD CVS Sync
+   - djm@cvs.openbsd.org 2010/02/02 22:49:34
+     [bufaux.c]
+     make buffer_get_string_ret() really non-fatal in all cases (it was
+     using buffer_get_int(), which could fatal() on buffer empty);
+     ok markus dtucker
+
 20100210
  - (djm) add -lselinux to LIBS before calling AC_CHECK_FUNCS for
    getseuserbyname; patch from calebcase AT gmail.com via
